--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ html, body {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: normal;
-    background-color: #EEF0F4;
+    background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+    user-select: none;
 }
 
 .container {
@@ -18,12 +19,13 @@ html, body {
 img {
     width: 150px;
     margin: 0 auto;
-    mix-blend-mode: darken;
+    border-radius: 15px;
 }
 
 input {
-    color: #432000;
-    background-color: #DCE1EB;
+    color: #e6e4ea;
+    font-weight: 600;
+    background-color: #4f4f4f;
     border: 0;
     padding: 15px;
     border-radius: 8px;
@@ -35,7 +37,7 @@ input {
 
 button {
     color: #FDFDFD;
-    background-color: #AC485A;
+    background-color: #599137;
     border: 0;
     padding: 15px;
     border-radius: 8px;
@@ -45,8 +47,9 @@ button {
 }
 
 button:hover {
-    background-color: #432000;
+    background-color: #76b1f5;
     cursor: pointer;
+    transition: all ease-in-out 0.2s;
 }
 
 ul {
@@ -58,8 +61,10 @@ ul {
 }
 
 ul li {
+    color: #e6e4ea;
     font-size: 20px;
-    background-color: #FFFDF8;
+    font-weight: 600;
+    background-color: #4f4f4f;
     padding: 15px;
     border-radius: 8px;
     flex-grow: 1;
@@ -68,6 +73,12 @@ ul li {
 }
 
 ul li:hover {
-    background-color: #FFECC7;
+    background-color: #8b68b3;
     cursor: pointer;
+}
+
+#shopping-list{
+    color: aliceblue;
+    font-weight: 600;
+    justify-content: center;
 }
